@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>iPlugWorkshop</string>
 	<key>CFBundleGetInfoString</key>
-	<string>iPlugWorkshop v0.3.0 Copyright 2020 Acme Inc</string>
+	<string>iPlugWorkshop v0.4.0 Copyright 2020 Acme Inc</string>
 	<key>CFBundleIconFile</key>
 	<string>iPlugWorkshop.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -19,11 +19,11 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.3.0</string>
+	<string>0.4.0</string>
 	<key>CFBundleSignature</key>
 	<string>CgmD</string>
 	<key>CFBundleVersion</key>
-	<string>0.3.0</string>
+	<string>0.4.0</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>LSApplicationCategoryType</key>
